# Cozy-Acres

./: README.md  build_pc.sh  compile.sh  keybindings.ini  settings.ini
.github/workflows/: pc-linux.yml
include/: _mem.h  m_actor.h  m_lib.h  types.h
include/JSystem/JGadget/: linklist.h
include/JSystem/JKernel/: JKRMacro.h
include/JSystem/JSupport/: JSUIosBase.h  JSUStreamEnum.h
include/JSystem/JUtility/: JUTFont.h
include/MSL_C/: ctype.h
include/PowerPC_EABI_Support/Msl/MSL_C/PPC_EABI/: cmath_gcn.h
include/dolphin/: vi.h
include/jaudio_NES/: audiostruct.h  channel.h  track.h
include/libc64/: math64.h
include/libforest/: gbi_extensions.h
include/libultra/: libultra.h  osContPad.h
packaging/linux/: AnimalCrossing.desktop  README.md
pc/: CMakeLists.txt  DOCUMENTATION.md
pc/build32-native/: CMakeCache.txt  cmake_install.cmake
pc/cmake/: Toolchain-linux32.cmake
pc/include/: pc_gx_internal.h  pc_http.h  pc_keybindings.h  pc_paths.h  pc_platform.h  pc_settings.h  pc_texture_pack.h
pc/res/: app.rc
pc/src/: pc_aram.c  pc_assets.c  pc_audio.c  pc_disc.c  pc_dvd.c  pc_gx.c  pc_gx_tev.c  pc_gx_texture.c  pc_http.c  pc_keybindings.c  pc_main.c  pc_os.c  pc_pad.c  pc_paths.c  pc_settings.c  pc_stubs.c  pc_stubs_cpp.cpp  pc_texture_pack.c  pc_vi.c
pc/tools/: gen_runtime_assets.py
scripts/: apt-cleanup-sources-list-d.sh  collect-pc-linux-gl-bug-info.sh  diagnose-apt-i386.sh  docker-build-linux-amd64.sh  docker-gdb-pc-ubuntu2404.sh  docker-run-pc-ubuntu2404.sh  fix-ubuntu-apt-i386.sh  gdb-pc-linux.sh  git-bisect-pc-regression.sh  install-linux-pc-deps.sh  install-linux-runtime-i386.sh  pc-linux-resolve-exe.sh  play-native-linux.sh  run-pc-linux-safegl.sh  run-pc-linux-x11-egl.sh  run-pc-linux.sh
src/: audio.c  c_keyframe.c  game.c  padmgr.c
src/actor/: ac_animal_logo.c  ac_ball.c  ac_gyo_kaseki.c  ac_gyo_test.c  ac_ins_chou.c  ac_ins_ka.c  ac_ins_mino.c  ac_snowman.c  ac_uki.c  ac_uki_move.c_inc
src/actor/npc/: ac_npc_anime.c_inc  ac_npc_draw.c_inc  ac_npc_think_wander.c_inc  ac_npc_totakeke.c
src/game/: m_actor.c  m_choice.c  m_choice_draw.c_inc  m_font_main.c_inc  m_lib.c  m_msg_main.c_inc  m_npc.c  m_play.c  m_player_draw.c_inc  m_player_lib.c  m_roll_lib.c  m_trademark.c  m_train_control.c
src/static/JSystem/JFramework/: JFWSystem.cpp
src/static/JSystem/JKernel/: JKRAramStream.cpp  JKRArchivePri.cpp
src/static/JSystem/JSupport/: JSUFileStream.cpp  JSUInputStream.cpp
src/static/jaudio_NES/game/: game64.c_inc
src/static/jaudio_NES/internal/: audiothread.c  channel.c  ja_calc.c  os.c  sub_sys.c  track.c
src/static/libc64/: math64.c
src/static/libforest/emu64/: emu64.c  emu64_utility.c
src/static/libultra/: contreaddata.c  controller.c
src/system/: sys_matrix.c
